[package]
name = "mudfish"
version = "0.1.0"
edition = "2021"

[lib]
name = "mudfish"
path = "src/lib.rs"

[dependencies]
bzip2 = "0.4"
postgres = "0.19"
regex = "1"
simple-error = "0.2"
whoami = "1.2"
clap = { version = "3", features = ["derive"], optional = true }

[features]
build-binary = ["clap"]

[[bin]]
name = "mudfish"
path = "src/bin/mudfish/main.rs"
required-features = ["build-binary"]
